pas/x502api.pas


  // Передача установленных настроек в модуль
  function X502_Configure(hnd: t_x502_hnd; flags: LongWord): LongInt; stdcall;
  // Установка параметров логического канала
  function X502_SetLChannel(hnd: t_x502_hnd; lch, phy_ch, mode, range, avg: LongWord): LongInt; stdcall;
  // Установка количества логических каналов
  function X502_SetLChannelCount(hnd: t_x502_hnd; lch_cnt : LongWord): LongInt; stdcall;
  // Получение количества логических каналов
  function X502_GetLChannelCount(hnd: t_x502_hnd; out lch_cnt: LongWord): LongInt; stdcall;
  // Установка делителя частоты сбора для АЦП
  function X502_SetAdcFreqDivider(hnd: t_x502_hnd; adc_freq_div : LongWord): LongInt; stdcall;
  // Установка значения межкадровой задержки для АЦП
  function X502_SetAdcInterframeDelay(hnd: t_x502_hnd; delay : LongWord): LongInt; stdcall;
  // Установка делителя частоты синхронного ввода с цифровых линий
  function X502_SetDinFreqDivider(hnd: t_x502_hnd; din_freq_div: LongWord): LongInt; stdcall;
  // Установка делителя частоты синхронного вывода
  function X502_SetOutFreqDivider(hnd: t_x502_hnd; out_freq_div : LongWord): LongInt; stdcall;
  // Установка частоты сбора АЦП
  function X502_SetAdcFreq(hnd: t_x502_hnd; var f_acq, f_frame: Double): LongInt; stdcall;
  // Установка частоты синхронного ввода с цифровых входов
  function X502_SetDinFreq(hnd: t_x502_hnd; var f_din: Double): LongInt; stdcall;
  // Установка частоты синхронного вывода.
  function X502_SetOutFreq(hnd: t_x502_hnd; var f_dout: Double): LongInt; stdcall;
  // Получить текущие значения частот сбора АЦП
  function X502_GetAdcFreq(hnd: t_x502_hnd; out f_acq, f_frame: Double): LongInt; stdcall;
  // Установка значения опорной частоты синхронизации
  function X502_SetRefFreq(hnd: t_x502_hnd; freq: LongWord): LongInt; stdcall;
  // Установка значения внешней опорной частоты синхронизации
  function X502_SetExtRefFreqValue(hnd: t_x502_hnd; freq : Double): LongInt; stdcall;
  //Получение значения опорной частоты синхронизации
  function X502_GetRefFreqValue(hnd: t_x502_hnd; out freq : Double): LongInt; stdcall;

  // Установка режима генерации частоты синхронизации.
  function X502_SetSyncMode(hnd: t_x502_hnd; sync_mode: LongWord): LongInt; stdcall;
  // Установка режима запуска частоты синхронизации.
  function X502_SetSyncStartMode(hnd: t_x502_hnd; sync_start_mode: LongWord): LongInt; stdcall;
  // Установить режим работы модуля
  function X502_SetMode(hnd: t_x502_hnd; mode: LongWord): LongInt; stdcall;
  // Получение текущего режима работы модуля.
  function X502_GetMode(hnd: t_x502_hnd; out mode: LongWord): LongInt; stdcall;
  // Установить коэффициенты для калибровки значений АЦП.
  function X502_SetAdcCoef(hnd: t_x502_hnd; range: LongWord; k, offs: Double): LongInt; stdcall;
  // Получение текущих калибровочных коэффициентов АЦП.
  function X502_GetAdcCoef(hnd: t_x502_hnd; range: LongWord; out k, offs: Double): LongInt; stdcall;
  // Установить коэффициенты для калибровки значений ЦАП.
  function X502_SetDacCoef(hnd: t_x502_hnd; ch : LongWord; k, double: Double): LongInt; stdcall;
  // Получение текущих калибровочных коэффициентов ЦАП.
  function X502_GetDacCoef(hnd: t_x502_hnd; ch : LongWord; out k, double: Double): LongInt; stdcall;

  // Рассчет частоты сбора АЦП
  function X502_CalcAdcFreq(ref_freq: Double; lch_cnt: LongWord; var f_acq, f_frame: Double; out result_freq_div : LongWord; out  result_frame_delay: LongWord): LongInt; stdcall;
  // Рассчет частоты синхронного ввода с цифровых входов.
  function X502_CalcDinFreq(ref_freq: Double; var f_din : Double; out result_freq_div : LongWord): LongInt; stdcall;
  // Рассчет частоты синхронного вывода
  function X502_CalcOutFreq(ref_freq: Double; var f_dout : Double; out result_freq_div : LongWord): LongInt; stdcall;
  {----------------------- Функции асинхронного ввода-вывода ------------------}
  // Асинхронный вывод данных на канал ЦАП.
  function X502_AsyncOutDac(hnd: t_x502_hnd; ch: LongWord; data: Double; flags: LongWord): LongInt; stdcall;
  // Асинхронный вывод данных на цифровые выходы.
  function X502_AsyncOutDig(hnd: t_x502_hnd; val, msk: LongWord): LongInt; stdcall;
  // Асинхронный ввод значений с цифровых входов.
  function X502_AsyncInDig(hnd: t_x502_hnd; out din: LongWord): LongInt; stdcall;
  // Асинхронный ввод одного кадра АЦП.
  function X502_AsyncGetAdcFrame(hnd: t_x502_hnd; flags: LongWord; tout: LongWord; out data: array of Double): LongInt; stdcall;


  {-------------- Функции для работы с синхронным потоковым вводом-выводом ----}
  // Разрешение синхронных потоков на ввод/вывод.
  function X502_StreamsEnable(hnd: t_x502_hnd; streams: LongWord): LongInt; stdcall;
  // Запрещение синхронных потоков на ввод/вывод.
  function X502_StreamsDisable(hnd: t_x502_hnd; streams: LongWord): LongInt; stdcall;
  // Получить значение, какие синхронные потоки разрешены.
  function X502_GetEnabledStreams(hnd: t_x502_hnd; out streams: LongWord): LongInt; stdcall;
  // Запуск синхронных потоков ввода/вывода.
  function X502_StreamsStart(hnd: t_x502_hnd): LongInt; stdcall;
  // Останов синхронных потоков ввода/вывода.
  function X502_StreamsStop(hnd: t_x502_hnd): LongInt; stdcall;
  // Проверка, запущен ли поток данных
  function X502_IsRunning(hnd: t_x502_hnd): LongInt; stdcall;


  // Чтение данных АЦП и цивровых входов из модуля.
  function X502_Recv(hnd: t_x502_hnd; out buf : array of LongWord; size: LongWord; tout : LongWord): LongInt; stdcall;
  // Передача потоковых данных ЦАП и цифровых выходов в модуль.
  function X502_Send(hnd: t_x502_hnd; const buf : array of LongWord; size: LongWord; tout: LongWord): LongInt; stdcall;
  // Обработка принятых отсчетов АЦП от модуля.
  function X502_ProcessAdcData(hnd: t_x502_hnd; const src: array of LongWord;
                               out dest: array of Double; var size : LongWord;
                               flags : LongWord): LongInt; stdcall;
  // Обработка принятых от модуля данных.
 function X502_ProcessData(hnd: t_x502_hnd; const src: array of LongWord; size: LongWord;
                     flags : LongWord; out adc_data: array of Double; var adc_data_size : LongWord;
                     out din_data: array of LongWord; var din_data_size: LongWord):LongInt; stdcall;
  // Обработка принятых от модуля данных ьзовательскими данными.
  function X502_ProcessDataWithUserExt(hnd: t_x502_hnd; const src: array of LongWord; size: LongWord;
                     flags : LongWord; out adc_data: array of Double; var adc_data_size : LongWord;
                     out din_data: array of LongWord; var din_data_size: LongWord;
                     out usr_data: array of LongWord; var usr_data_size: LongWord):LongInt; stdcall;
  // Подготовка данных для вывода в модуль.
  function X502_PrepareData(hnd: t_x502_hnd; const dac1, dac2: array of Double;
                            const digout: array of LongWord; size, flags : LongWord;
                            out out_buf: array of LongWord):LongInt; stdcall;

  // Получить количество отсчетов в буфере потока на ввод.
  function X502_GetRecvReadyCount(hnd: t_x502_hnd; out rdy_cnt: LongWord):LongInt; stdcall;
  // Получить размер свободного места в буфере потока на вывод.
  function X502_GetSendReadyCount(hnd: t_x502_hnd; out rdy_cnt: LongWord):LongInt; stdcall;
  // Получить номер следующего ожидаемого логического канала АЦП для обработки.
  function X502_GetNextExpectedLchNum(hnd: t_x502_hnd; out lch: LongWord):LongInt; stdcall;
  // Начало подготовки вывода синхронных данных
  function X502_PreloadStart(hnd: t_x502_hnd): LongInt; stdcall;

  //Установка ранее загруженного циклического сигнала на вывод
  function X502_OutCycleLoadStart(hnd: t_x502_hnd; size: LongWord):LongInt; stdcall;
  //Установка ранее загруженного циклического сигнала на вывод
  function X502_OutCycleSetup(hnd: t_x502_hnd; flags: LongWord):LongInt; stdcall;
  // Останов вывода циклического сигнала
  function X502_OutCycleStop(hnd: t_x502_hnd; flags: LongWord):LongInt; stdcall;
  // Проверка, завершена ли установка или останов циклического сигнала
  function X502_OutCycleCheckSetupDone(hnd: t_x502_hnd; out done : LongBool):LongInt; stdcall;  
  // Чтение флагов статуса вывода
  function X502_OutGetStatusFlags(hnd: t_x502_hnd; out status : LongWord): LongInt; stdcall;

  // Установка размера буфера для синхронного ввода или вывода.
  function X502_SetStreamBufSize(hnd: t_x502_hnd;  dma_ch, size: LongWord): LongInt; stdcall;
  // Установка шага при передаче потока на ввод или вывод.
  function X502_SetStreamStep(hnd: t_x502_hnd; dma_ch, step: LongWord): LongInt; stdcall;

  {------------ Функции для работы с сигнальным процессором -------------------}

  // Загрузка прошивки сигнального процессора BlackFin.
  function X502_BfLoadFirmware(hnd: t_x502_hnd; filename: string): LongInt; stdcall;
  // Проверка, загружена ли прошивка BlackFIn
  function X502_BfCheckFirmwareIsLoaded(hnd: t_x502_hnd; out version: LongWord): LongInt; stdcall;
  /// Чтение блока данных из памяти сигнального процессора.
  function X502_BfMemRead(hnd: t_x502_hnd; addr : LongWord; out regs: array of LongWord;
                                size: LongWord): LongInt; stdcall;
  /// Запись блока данных в память сигнального процессора.
  function X502_BfMemWrite(hnd: t_x502_hnd; addr : LongWord;
                           const regs: array of LongWord; size: LongWord): LongInt; stdcall;
  /// Передача управляющей команды сигнальному процессору.
  function X502_BfExecCmd(hnd: t_x502_hnd; cmd_code : Word; par : LongWord;
                const snd_data : array of LongWord; snd_size : LongWord;
                out rcv_data : array of LongWord; rcv_size : LongWord;
                tout: LongWord; out recvd_size: LongWord): LongInt; stdcall;

  {-------------------  Функции для работы с Flash-памятью модуля -------------}
  /// Чтение блока данных из Flash-памяти модуля.
  function X502_FlashRead(hnd: t_x502_hnd; addr: LongWord;
                          out data: array of Byte; size: LongWord): LongInt; stdcall;
  ///Запись блока данных во Flash-память модуля.
  function X502_FlashWrite(hnd: t_x502_hnd; addr: LongWord;
                           const data: array of Byte; size: LongWord): LongInt; stdcall;
  /// Стирание блока во Flash-памяти.
  function X502_FlashErase(hnd: t_x502_hnd; addr: LongWord; size: LongWord): LongInt; stdcall;
  /// Разрешение записи в пользовательскую область Flash-памяти.
  function X502_FlashWriteEnable(hnd: t_x502_hnd): LongInt; stdcall;
  /// Запрет записи в пользовательскую область Flash-памяти.
  function X502_FlashWriteDisable(hnd: t_x502_hnd): LongInt; stdcall;

  {-----------------  Дополнительные вспомогательные функции ------------------}
  //Получить версию библиотеки.
  function X502_GetLibraryVersion() : LongWord; stdcall;
  // Получение строки об ошибке
  function X502_GetErrorString(err: LongInt) : string; stdcall;
  // Моргание светодиодом на передней панели.
  function X502_LedBlink(hnd: t_x502_hnd): LongInt; stdcall;
  // Установка подтягивающих резисторов на входных линиях.
  function X502_SetDigInPullup(hnd: t_x502_hnd; pullups : LongWord): LongInt; stdcall;
  // Проверка поддержки модулем заданной возможности
  function X502_CheckFeature(hnd: t_x502_hnd;  feature : LongWord) : LongInt; stdcall;








implementation
  function X502_Create() : t_x502_hnd; stdcall; external 'x502api.dll';
  function X502_Free(hnd: t_x502_hnd) : LongInt; stdcall; external 'x502api.dll';
